[metadata]
name = pydrizzle
version = 6.0.0
author = Warren Hack
author-email = help@stsci.edu
summary = Geometrically correct and combine images using Drizzle
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
    stsci.tools (==2.9)
    pyfits (>=2.4.0)
    numpy (>=1.5.1)

[files]
packages_root = lib
packages =
    pydrizzle
    pydrizzle.distortion
    pydrizzle.traits102

[extension=pydrizzle.arrdriz]
# TODO: This is such a long list...I wonder if it's possible to just do a
# a wildcard.  If not, suggest it.
sources =
    src/arrdrizmodule.c
    src/tdriz.c
    src/tblot.c
    src/twdriz.c
    src/drutil.c
    src/doblot.c
    src/drcall.c
    src/inter2d.c
    src/bieval.c
    libf2c/abort_.c
    libf2c/backspac.c
    libf2c/c_abs.c
    libf2c/c_cos.c
    libf2c/c_div.c
    libf2c/c_exp.c
    libf2c/c_log.c
    libf2c/c_sin.c
    libf2c/c_sqrt.c
    libf2c/cabs.c
    libf2c/close.c
    libf2c/d_abs.c
    libf2c/d_acos.c
    libf2c/d_asin.c
    libf2c/d_atan.c
    libf2c/d_atn2.c
    libf2c/d_cnjg.c
    libf2c/d_cos.c
    libf2c/d_cosh.c
    libf2c/d_dim.c
    libf2c/d_exp.c
    libf2c/d_imag.c
    libf2c/d_int.c
    libf2c/d_lg10.c
    libf2c/d_log.c
    libf2c/d_mod.c
    libf2c/d_nint.c
    libf2c/d_prod.c
    libf2c/d_sign.c
    libf2c/d_sin.c
    libf2c/d_sinh.c
    libf2c/d_sqrt.c
    libf2c/d_tan.c
    libf2c/d_tanh.c
    libf2c/derfc_.c
    libf2c/dfe.c
    libf2c/dolio.c
    libf2c/dtime_.c
    libf2c/due.c
    libf2c/ef1asc_.c
    libf2c/ef1cmc_.c
    libf2c/endfile.c
    libf2c/erfc_.c
    libf2c/err.c
    libf2c/etime_.c
    libf2c/exit_.c
    libf2c/f77_aloc.c
    libf2c/f77vers.c
    libf2c/fmt.c
    libf2c/fmtlib.c
    libf2c/getarg_.c
    libf2c/getenv_.c
    libf2c/h_abs.c
    libf2c/h_dim.c
    libf2c/h_dnnt.c
    libf2c/h_indx.c
    libf2c/h_len.c
    libf2c/h_mod.c
    libf2c/h_nint.c
    libf2c/h_sign.c
    libf2c/hl_ge.c
    libf2c/hl_gt.c
    libf2c/hl_le.c
    libf2c/hl_lt.c
    libf2c/i77vers.c
    libf2c/i_abs.c
    libf2c/i_dim.c
    libf2c/i_dnnt.c
    libf2c/i_indx.c
    libf2c/i_len.c
    libf2c/i_mod.c
    libf2c/i_nint.c
    libf2c/i_sign.c
    libf2c/iargc_.c
    libf2c/iio.c
    libf2c/ilnw.c
    libf2c/inquire.c
    libf2c/l_ge.c
    libf2c/l_gt.c
    libf2c/l_le.c
    libf2c/l_lt.c
    libf2c/lbitbits.c
    libf2c/lbitshft.c
    libf2c/lread.c
    libf2c/lwrite.c
    libf2c/main.c
    libf2c/open.c
    libf2c/pow_ci.c
    libf2c/pow_dd.c
    libf2c/pow_di.c
    libf2c/pow_hh.c
    libf2c/pow_ii.c
    libf2c/pow_ri.c
    libf2c/pow_zi.c
    libf2c/pow_zz.c
    libf2c/r_abs.c
    libf2c/r_acos.c
    libf2c/r_asin.c
    libf2c/r_atan.c
    libf2c/r_atn2.c
    libf2c/r_cnjg.c
    libf2c/r_cos.c
    libf2c/r_cosh.c
    libf2c/r_dim.c
    libf2c/r_exp.c
    libf2c/r_imag.c
    libf2c/r_int.c
    libf2c/r_lg10.c
    libf2c/r_log.c
    libf2c/r_mod.c
    libf2c/r_nint.c
    libf2c/r_sign.c
    libf2c/r_sin.c
    libf2c/r_sinh.c
    libf2c/r_sqrt.c
    libf2c/r_tan.c
    libf2c/r_tanh.c
    libf2c/rdfmt.c
    libf2c/rewind.c
    libf2c/rsfe.c
    libf2c/rsli.c
    libf2c/rsne.c
    libf2c/s_cat.c
    libf2c/s_cmp.c
    libf2c/s_copy.c
    libf2c/s_paus.c
    libf2c/s_rnge.c
    libf2c/s_stop.c
    libf2c/sfe.c
    libf2c/sig_die.c
    libf2c/signal_.c
    libf2c/sue.c
    libf2c/system_.c
    libf2c/typesize.c
    libf2c/uio.c
    libf2c/uninit.c
    libf2c/util.c
    libf2c/wref.c
    libf2c/wrtfmt.c
    libf2c/wsfe.c
    libf2c/wsle.c
    libf2c/wsne.c
    libf2c/xwsne.c
    libf2c/z_abs.c
    libf2c/z_cos.c
    libf2c/z_div.c
    libf2c/z_exp.c
    libf2c/z_log.c
    libf2c/z_sin.c
    libf2c/z_sqrt.c
#    libf2c/derf_.c
#    libf2c/derfc_.c
#    libf2c/erf_.c
#    libf2c/erfc_.c
define_macros =
    NO_UNKNOWN_PROCEDURE = 1
include_dirs =
    libf2c
    numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[global]
commands = stsci.distutils.command.easier_install.easier_install
setup_hooks =
    stsci.distutils.hooks.use_packages_root
    pydrizzle_setup.setup_hook

[easy_install]
find-links = ..
